# rise-of-industry-calculator

./: .gitattributes  .gitmodules  Cargo.toml  README.md  data.json  out.txt  output.md
calculator/: Cargo.toml  README.md
calculator/src/: iter_ext.rs  lib.rs  main.rs  serialization.rs
import/: Cargo.toml
import/src/: main.rs
importer/: Cargo.toml
importer/src/: lib.rs  main.rs  unity.rs
importer/tests/: CoalGatherer.prefab  tests.rs
src/: main.rs
typed-index/: Cargo.toml
typed-index-collections/: Cargo.toml
typed-index-collections/src/: boxed_slice.rs  iter.rs  lib.rs  slice.rs  typed_index.rs  vec.rs
typed-index-collections/tests/: vec.rs
typed-index/src/: boxed_slice.rs  index.rs  iter.rs  lib.rs  macros.rs  multi_index_macro.rs  slice.rs  typed_index.rs  typed_index_collection.rs  vec.rs
typed-index/src/vec/: into_iter.rs
typed-index/tests/: vec.rs
