[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
ignore = "0.4.21"
log = "0.4.20"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
