[package]
name = "rise-of-industry-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "calculator"
path = "src/main.rs"

[dependencies]
env_logger = "0.10.1"
ignore = "0.4.21"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
typed-index-collections = { path = "../typed-index-collections" }
index-types = { git = "https://github.com/mickvangelderen/index-types" }
uuid = { version = "1.6.1", features = ["serde"] }
