[package]
name = "rise-of-industry-importer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "importer"
path = "src/main.rs"

[dependencies]
env_logger = "0.10.1"
ignore = "0.4.21"
log = "0.4.20"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
rise-of-industry-calculator = { path = "../calculator" }
serde_json = "1.0.108"
